File Transfer test working, needs LZ validation in the future.